--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,2 @@
-altair
-pandas
 streamlit
-pymongo
-paramiko
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-httpx_oauth==0.5.0
-
-
+streamlit-calendar
